working on the site

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <h2 class="text-center">About Me</h2>
     <div class="row text-center">
       <div class="col">
-        <img src="images/profile.jpg" alt="Esther" class="rounded-circle img-fluid" style="width: 200px;">
+        <img src="pd.jpg" alt="Esther" class="rounded-circle img-fluid" style="width: 300px;">
         <p>Hello, I'm Nakaweesi Esther. I'm a web developer with a passion for building interactive websites. Here’s a little bit about me.</p>
         <h4>Hobbies</h4>
         <ul class="list-unstyled">
