--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/image1.jpg" class="d-block w-100" alt="Project 1">
+          <img src="getty.jpg" class="d-block w-100" alt="Project 1">
           <div class="carousel-caption d-none d-md-block">
             <h5>Project 1</h5>
             <p>A glimpse into my creative side.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/image2.jpg" class="d-block w-100" alt="Project 2">
+          <img src="2.jpg" class="d-block w-100" alt="Project 2">
           <div class="carousel-caption d-none d-md-block">
             <h5>Project 2</h5>
             <p>More of my interesting projects.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/image3.jpg" class="d-block w-100" alt="Project 3">
+          <img src="1.jpg" class="d-block w-100" alt="Project 3">
           <div class="carousel-caption d-none d-md-block">
             <h5>Project 3</h5>
             <p>Discover the beauty of my work.</p>
